# ourCodes3D

./: first.txt
utaustinvilla3d-master/: CMakeLists.txt  utaustinvilla3d_master.cbp
utaustinvilla3d-master/behaviors/: naobehavior.cc  naobehavior.h  strategy.cc
utaustinvilla3d-master/headers/: headers.h
utaustinvilla3d-master/ikfast/: ikfast_left_foot.cpp
